--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <style>
         .hero-pattern {
             background: linear-gradient(135deg, rgba(0, 0, 0, 0.7) 0%, rgba(20, 20, 40, 0.5) 50%, rgba(0, 0, 0, 0.7) 100%), 
-                        url('assets/pics/The%20Orphic%20Eye%20-%203D%20Enhanced.png');
+                        background: url('assets/pics/Ordo%20Orphika,%20HD%20Background.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
