--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <style>
         .hero-pattern {
             background: linear-gradient(135deg, rgba(0, 0, 0, 0.7) 0%, rgba(20, 20, 40, 0.5) 50%, rgba(0, 0, 0, 0.7) 100%), 
-                        background: url('assets/pics/Ordo%20Orphika,%20HD%20Background.png');
+                        url('assets/pics/Ordo%20Orphika,%20HD%20Background.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -175,9 +175,9 @@
     <!-- Hero Section -->
     <section id="home" class="hero-pattern min-h-screen flex items-center justify-center pt-24">
         <div class="container mx-auto px-6 text-center">
-            <div class="animate-float">
+            <!--<div class="animate-float">
                 <h1 class="text-8xl md:text-9xl lg:text-[12rem] font-band mb-6 tracking-wider band-title-3d">ORDO ORPHIKA</h1>
-            </div>
+            </div>-->
             <!--<p class="text-2xl md:text-3xl italic text-white mb-10 font-light">{Sub Title Placeholder}</p>-->
             <div class="flex flex-col sm:flex-row justify-center gap-6 mb-16">
                 <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="bg-accent hover:bg-red-700 text-white px-8 py-4 rounded-lg transition-all duration-300 transform hover:scale-105 shadow-xl font-medium text-center">
