--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <!-- Keep an accessible H1 for SEO and screen readers, but visually hide the text since we're using an image logo -->
                 <h1 class="sr-only">Ordo Orphika</h1>
                 <!-- Floating responsive logo image replacing the text. Use same visual weight via sizing classes and existing band-title-3d for effects -->
-                <img src="assets/pics/OrdoOrphika_nobackground.png" alt="Ordo Orphika logo" class="mx-auto mb-6 w-64 sm:w-96 md:w-[28rem] lg:w-[36rem] band-title-3d" />
+                <img src="assets/pics/OrdoOrphika_nobackground.png" alt="Ordo Orphika logo" class="mx-auto mb-6 w-[32rem] sm:w-[40rem] md:w-[48rem] lg:w-[64rem] band-title-3d" />
             </div>
             <!--<p class="text-2xl md:text-3xl italic text-white mb-10 font-light">{Sub Title Placeholder}</p>-->
             <div class="flex flex-col sm:flex-row justify-center gap-6 mb-16">
