--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
     <base target="_self">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ordo Orph            <div class="space-y-8">
-                <p class="genre-text text-4xl sm:text-5xl md:text-6xl lg:text-7xl text-center animate-float" style="animation-delay: 0.3s">
-                    Rock, Blues & Funk
-                </p>
-                <div class="animate-float">
-                    <!-- Keep an accessible H1 for SEO and screen readers, but visually hide the text since we're using an image logo -->
-                    <h1 class="sr-only">Ordo Orphika</h1>
-                    <!-- Floating responsive logo image replacing the text. Use logo-specific glow effect and larger sizes -->
-                    <img src="assets/pics/OrdoOrphika_nobackgroundLARGE.png" alt="Ordo Orphika logo" class="mx-auto mb-16 w-[48rem] sm:w-[56rem] md:w-[64rem] lg:w-[72rem] logo-glow" /> Official Electronic Press Kit</title>
+    <title>Ordo Orphika - Official Electronic Press Kit</title>
     <meta name="description" content="Official EPK for Ordo Orphika - Seattle-based rock band. Bio, music, videos, tour dates, and press materials.">
     <meta name="keywords" content="Ordo Orphika, occult rock, Seattle band, music, EPK, press kit">
     
@@ -37,7 +29,7 @@
     <style>
         @font-face {
             font-family: 'Ghost Theater';
-            src: url('assets/fonts/cormorant.light.otf') format('opentype');
+            src: url('assets/fonts/Ghost Theater DEMO.otf') format('opentype');
             font-weight: normal;
             font-style: normal;
             font-display: swap;
