--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </div>
 
     <!-- Hero Section -->
-    <section id="home" class="hero-pattern min-h-screen flex items-center justify-center pt-24">
+    <section id="home" class="hero-pattern min-h-screen flex items-center justify-center mt-12">
         <div class="container mx-auto px-6 text-center">
             <div class="animate-float">
                 <!-- Keep an accessible H1 for SEO and screen readers, but visually hide the text since we're using an image logo -->
@@ -195,7 +195,7 @@
             </div>
             <div class="flex flex-col sm:flex-row justify-center gap-6 mb-16">
                 <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="inline-block transition-all duration-300 transform hover:scale-105">
-                    <img src="assets/pics/soundcloud_button.png" alt="Listen on SoundCloud" class="h-14 w-auto" />
+                    <img src="assets/pics/soundcloud_button.png" alt="Listen on SoundCloud" class="h-[52px] w-auto" />
                 </a>
                 <button onclick="scrollToSection('contact')" class="bg-gold text-primary px-8 py-4 rounded-lg transition-all duration-300 transform hover:scale-105 shadow-2xl font-medium focus:outline-none focus:ring-4 focus:ring-gold/40">
                     CONTACT US
