--- a/index.html
+++ b/index.html
@@ -182,20 +182,20 @@
     </div>
 
     <!-- Hero Section -->
-    <section id="home" class="hero-pattern min-h-screen flex items-center justify-center mt-12">
+    <section id="home" class="hero-pattern min-h-screen flex items-center justify-center pt-24">
         <div class="container mx-auto px-6 text-center">
             <div class="animate-float">
                 <!-- Keep an accessible H1 for SEO and screen readers, but visually hide the text since we're using an image logo -->
                 <h1 class="sr-only">Ordo Orphika</h1>
                 <!-- Floating responsive logo image replacing the text. Use logo-specific glow effect and larger sizes -->
-                <img src="assets/pics/OrdoOrphica_Title5.png" alt="Ordo Orphika logo" class="mx-auto -mb-16 w-[48rem] sm:w-[56rem] md:w-[64rem] lg:w-[72rem] logo-glow" />
+                <img src="assets/pics/OrdoOrphica_Title5.png" alt="Ordo Orphika logo" class="mx-auto relative -top-12 w-[48rem] sm:w-[56rem] md:w-[64rem] lg:w-[72rem] logo-glow" />
             </div>
             <div class="text-gold text-3xl sm:text-4xl md:text-5xl mb-12" style="font-family: 'Cormorant Light', serif; letter-spacing: 0.2em; text-shadow: 0 0 20px rgba(212, 175, 55, 0.9), 0 0 40px rgba(212, 175, 55, 0.7), 0 0 60px rgba(212, 175, 55, 0.5);">
                 Rock, Blues & Funk
             </div>
             <div class="flex flex-col sm:flex-row justify-center gap-6 mb-16">
-                <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="inline-block transition-all duration-300 transform hover:scale-105">
-                    <img src="assets/pics/soundcloud_button.png" alt="Listen on SoundCloud" class="h-[52px] w-auto" />
+                <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="inline-flex items-center px-8 py-4 rounded-lg transition-all duration-300 transform hover:scale-105">
+                    <img src="assets/pics/soundcloud_button.png" alt="Listen on SoundCloud" class="h-full w-auto block" />
                 </a>
                 <button onclick="scrollToSection('contact')" class="bg-gold text-primary px-8 py-4 rounded-lg transition-all duration-300 transform hover:scale-105 shadow-2xl font-medium focus:outline-none focus:ring-4 focus:ring-gold/40">
                     CONTACT US
