--- a/index.html
+++ b/index.html
@@ -194,8 +194,9 @@
                 Rock, Blues & Funk
             </div>
             <div class="flex flex-col sm:flex-row justify-center gap-6 mb-16">
-                <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="inline-flex items-center px-8 py-4 rounded-lg bg-[#ff5500] hover:bg-[#ff7700] text-white transition-all duration-300 transform hover:scale-105 shadow-xl font-medium">
-                    <img src="assets/pics/soundcloud_button.png" alt="Listen on SoundCloud" class="h-full w-auto block" />
+                <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="flex items-center gap-2 bg-[#ff5500] hover:bg-[#ff7700] text-white px-8 py-4 rounded-lg transition-all duration-300 transform hover:scale-105 shadow-xl font-medium text-center">
+                    <i class="fab fa-soundcloud text-2xl"></i>
+                    LISTEN NOW
                 </a>
                 <button onclick="scrollToSection('contact')" class="bg-gold text-primary px-8 py-4 rounded-lg transition-all duration-300 transform hover:scale-105 shadow-2xl font-medium focus:outline-none focus:ring-4 focus:ring-gold/40">
                     CONTACT US
