--- a/index.html
+++ b/index.html
@@ -73,12 +73,17 @@
         }
     </script>
     <style>
-        .hero-pattern {
+        /* .hero-pattern {
             background: linear-gradient(135deg, rgba(0, 0, 0, 0.7) 0%, rgba(20, 20, 40, 0.5) 50%, rgba(0, 0, 0, 0.7) 100%), 
                         url('assets/pics/Background.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
+        } */
+
+        /* Temporary: solid black hero background. Original pattern above is preserved in comments. */
+        .hero-pattern {
+            background: #000000;
         }
         .section-pattern {
             background: linear-gradient(135deg, rgba(10, 10, 15, 0.95) 0%, rgba(45, 27, 105, 0.85) 100%);
