--- a/index.html
+++ b/index.html
@@ -119,12 +119,10 @@
             filter: drop-shadow(0 0 40px rgba(255, 255, 255, 0.8)) drop-shadow(0 0 60px rgba(255, 255, 255, 0.4));
         }
         .logo-glow {
-            filter: 
-                drop-shadow(0 0 40px rgba(255, 255, 255, 0.9))
-                drop-shadow(0 0 80px rgba(255, 255, 255, 0.6))
-                drop-shadow(0 0 120px rgba(212, 175, 55, 0.4));
+            /* Reduced glow: subtle white rim and faint warm halo */
+            filter: drop-shadow(0 0 12px rgba(255, 255, 255, 0.6)) drop-shadow(0 0 20px rgba(212, 175, 55, 0.15));
             transform-origin: center;
-            transform: scale(1.1);
+            transform: scale(1.03);
         }
         .parallax {
             background-attachment: fixed;
