--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <style>
         @font-face {
             font-family: 'Cormorant Light';
-            src: url('assets/fonts/cormorant.light.otf') format('opentype');
+            src: url('assets/fonts/cormorant.regular.otf') format('opentype');
             font-weight: normal;
             font-style: normal;
             font-display: swap;
@@ -119,10 +119,14 @@
             filter: drop-shadow(0 0 40px rgba(255, 255, 255, 0.8)) drop-shadow(0 0 60px rgba(255, 255, 255, 0.4));
         }
         .logo-glow {
-            /* Reduced glow: subtle white rim and faint warm halo */
-            filter: drop-shadow(0 0 12px rgba(255, 255, 255, 0.6)) drop-shadow(0 0 20px rgba(212, 175, 55, 0.15));
+            /* Match the layered glow used by the genre text (approximation using drop-shadows) */
+            filter: 
+                drop-shadow(0 0 10px rgba(255,255,255,0.9))
+                drop-shadow(0 0 20px rgba(255,255,255,0.7))
+                drop-shadow(0 0 30px rgba(212,175,55,0.5))
+                drop-shadow(0 0 40px rgba(212,175,55,0.3));
             transform-origin: center;
-            transform: scale(1.03);
+            transform: scale(1.04);
         }
         .parallax {
             background-attachment: fixed;
