--- a/index.html
+++ b/index.html
@@ -119,14 +119,9 @@
             filter: drop-shadow(0 0 40px rgba(255, 255, 255, 0.8)) drop-shadow(0 0 60px rgba(255, 255, 255, 0.4));
         }
         .logo-glow {
-            /* Match the layered glow used by the genre text (approximation using drop-shadows) */
-            filter: 
-                drop-shadow(0 0 10px rgba(255,255,255,0.9))
-                drop-shadow(0 0 20px rgba(255,255,255,0.7))
-                drop-shadow(0 0 30px rgba(212,175,55,0.5))
-                drop-shadow(0 0 40px rgba(212,175,55,0.3));
-            transform-origin: center;
-            transform: scale(1.04);
+            /* Glow removed as requested */
+            filter: none;
+            transform: none;
         }
         .parallax {
             background-attachment: fixed;
