--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                 </a>
                 <div class="hidden md:flex space-x-6 items-center">
                     <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="hover:text-neon transition-all duration-300 hover:scale-110">Music</a>
+                    <a href="videos.html" class="hover:text-neon transition-all duration-300 hover:scale-110">Videos</a>
                     <a href="#contact" class="hover:text-accent transition-all duration-300 hover:scale-110">Contact</a>
                     <a href="#" onclick="openBioPopup()" class="hover:text-neon transition-all duration-300 hover:scale-110">Bio</a>
                     <!-- <a href="#tour" class="bg-gold text-primary px-4 py-2 rounded-full hover:scale-105 transition-all duration-200 font-tech">TOUR</a> -->
@@ -174,8 +175,8 @@
             </div>
             <nav class="flex flex-col space-y-4" aria-label="Mobile navigation">
                 <a href="#bio" onclick="openBioPopup()" class="text-white hover:text-accent text-lg">Bio</a>
+                <a href="videos.html" class="text-white hover:text-neon text-lg">Videos</a>
                 <a href="#music" class="text-white hover:text-neon text-lg">Music</a>
-                <a href="#videos" class="text-white hover:text-accent text-lg">Videos</a>
                 <a href="#tour" class="bg-gold text-primary px-4 py-2 rounded-full w-max">TOUR</a>
                 <a href="#press" class="text-white hover:text-accent text-lg">Press</a>
                 <a href="#contact" class="text-white hover:text-neon text-lg">Contact</a>
@@ -190,7 +191,7 @@
                 <!-- Keep an accessible H1 for SEO and screen readers, but visually hide the text since we're using an image logo -->
                 <h1 class="sr-only">Ordo Orphika</h1>
                 <!-- Floating responsive logo image replacing the text. Use logo-specific glow effect and larger sizes -->
-                <img src="assets/pics/OrdoOrphica_Title5.png" alt="Ordo Orphika logo" class="mx-auto relative -top-8 w-[48rem] sm:w-[56rem] md:w-[64rem] lg:w-[72rem] logo-glow" />
+                <img src="assets/pics/OrdoOrphica_Title.png" alt="Ordo Orphika logo" class="mx-auto relative -top-8 w-[48rem] sm:w-[56rem] md:w-[64rem] lg:w-[72rem] logo-glow" />
             </div>
             <div class="text-gold text-3xl sm:text-4xl md:text-5xl mb-12" style="font-family: 'Cormorant Light', serif; letter-spacing: 0.2em; text-shadow: 0 0 20px rgba(212, 175, 55, 0.9), 0 0 40px rgba(212, 175, 55, 0.7), 0 0 60px rgba(212, 175, 55, 0.5);">
                 Rock, Blues & Funk
