--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Custom Fonts -->
     <style>
         @font-face {
-            font-family: 'Cormorant Light';
+            font-family: 'Cormorant Regular';
             src: url('assets/fonts/cormorant.regular.otf') format('opentype');
             font-weight: normal;
             font-style: normal;
@@ -193,7 +193,7 @@
                 <!-- Floating responsive logo image replacing the text. Use logo-specific glow effect and larger sizes -->
                 <img src="assets/pics/OrdoOrphica_Title.png" alt="Ordo Orphika logo" class="mx-auto relative -top-8 w-[48rem] sm:w-[56rem] md:w-[64rem] lg:w-[72rem] logo-glow" />
             </div>
-            <div class="text-gold text-3xl sm:text-4xl md:text-5xl mb-12" style="font-family: 'Cormorant Light', serif; letter-spacing: 0.2em; text-shadow: 0 0 20px rgba(212, 175, 55, 0.9), 0 0 40px rgba(212, 175, 55, 0.7), 0 0 60px rgba(212, 175, 55, 0.5);">
+            <div class="text-gold text-3xl sm:text-4xl md:text-5xl mb-12" style="font-family: 'Cormorant Regular', serif; letter-spacing: 0.2em; text-shadow: 0 0 20px rgba(212, 175, 55, 0.9), 0 0 40px rgba(212, 175, 55, 0.7), 0 0 60px rgba(212, 175, 55, 0.5);">
                 Rock, Blues & Funk
             </div>
             <div class="flex flex-col sm:flex-row justify-center gap-6 mb-16">
@@ -333,7 +333,7 @@
             <div class="grid lg:grid-cols-2 gap-8 items-start">
                 <div class="relative">
                     <div class="neon-border rounded-2xl p-2">
-                        <img src="assets/pics/Band%20Pic%202.jpeg" alt="Ordo Orphika band members performing" class="rounded-2xl w-full h-auto shadow-2xl" loading="lazy">
+                        <img src="assets/pics/band_pic.jpeg" alt="Ordo Orphika band members performing" class="rounded-2xl w-full h-auto shadow-2xl" loading="lazy">
                     </div>
                     <div class="absolute -bottom-4 -right-4 bg-accent text-white p-3 rounded-xl shadow-2xl">
                         <!--<p class="font-tech text-sm">EST. 2023 | SEATTLE</p>-->
@@ -365,7 +365,7 @@
                     <!-- Member Photos -->
                     <div class="pt-6">
                         <h4 class="text-xl font-display text-gold mb-4 text-center">THE ORPHIC COUNCIL</h4>
-                        <div class="grid grid-cols-2 gap-4">
+                        <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
                             <div class="text-center">
                                 <div class="neon-border rounded-xl p-2 mb-3">
                                     <img src="assets/pics/Ian.jpeg" alt="Ian McKagan - Guitar" class="rounded-lg w-full h-32 object-cover shadow-xl">
@@ -376,10 +376,31 @@
                             </div>
                             <div class="text-center">
                                 <div class="neon-border rounded-xl p-2 mb-3">
-                                    <img src="assets/pics/Johnny.jpeg" alt="Johnny - Keys" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                    <img src="assets/pics/Jon.jpeg" alt="Jon Plaut - Keys" class="rounded-lg w-full h-32 object-cover shadow-xl">
                                 </div>
-                                <h5 class="text-sm font-display text-gold">Johnny</h5>
+                                <h5 class="text-sm font-display text-gold">Jon Plaut</h5>
                                 <p class="text-neon font-tech text-xs">Keys</p>
+                            </div>
+                            <div class="text-center">
+                                <div class="neon-border rounded-xl p-2 mb-3">
+                                    <img src="assets/pics/Robby.jpeg" alt="Robby DeRosa - Drums" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                </div>
+                                <h5 class="text-sm font-display text-gold">Robby DeRosa</h5>
+                                <p class="text-neon font-tech text-xs">Drums</p>
+                            </div>
+                            <div class="text-center">
+                                <div class="neon-border rounded-xl p-2 mb-3">
+                                    <img src="assets/pics/Mathew.jpeg" alt="Mathew Wooten - Saxophone" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                </div>
+                                <h5 class="text-sm font-display text-gold">Mathew Wooten</h5>
+                                <p class="text-neon font-tech text-xs">Saxophone</p>
+                            </div>
+                            <div class="text-center">
+                                <div class="neon-border rounded-xl p-2 mb-3">
+                                    <img src="assets/pics/Woody.jpeg" alt="Woody Frank - Bass" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                </div>
+                                <h5 class="text-sm font-display text-gold">Woody Frank</h5>
+                                <p class="text-neon font-tech text-xs">Bass</p>
                             </div>
                         </div>
                     </div>
