--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 </a>
                 <div class="hidden md:flex space-x-6 items-center">
                     <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="hover:text-neon transition-all duration-300 hover:scale-110">Music</a>
-                    <a href="videos.html" class="hover:text-neon transition-all duration-300 hover:scale-110">Videos</a>
+                    <a href="#videos" class="hover:text-neon transition-all duration-300 hover:scale-110">Videos</a>
                     <a href="#contact" class="hover:text-accent transition-all duration-300 hover:scale-110">Contact</a>
                     <a href="#" onclick="openBioPopup()" class="hover:text-neon transition-all duration-300 hover:scale-110">Bio</a>
                     <!-- <a href="#tour" class="bg-gold text-primary px-4 py-2 rounded-full hover:scale-105 transition-all duration-200 font-tech">TOUR</a> -->
@@ -215,6 +215,35 @@
 
     <!-- Placeholder target for the down-arrow (kept visually hidden) -->
     <div id="music" aria-hidden="true" class="h-0 overflow-hidden">&nbsp;</div>
+
+    <!-- Videos Section -->
+    <section id="videos" class="bg-dark py-24 section-pattern relative"> 
+        <div class="absolute inset-0 opacity-10">
+            <div class="absolute inset-0 bg-gradient-to-br from-transparent to-black"></div>
+        </div>
+        <div class="container mx-auto px-6 relative z-10">
+            <h2 class="text-4xl font-display font-bold text-white text-center mb-6">OFFICIAL VIDEOS</h2>
+            <p class="text-center text-gray-300 max-w-2xl mx-auto mb-10">Watch official music videos and live clips from Ordo Orphika. Full screen friendly and responsive — click to expand or use the links to view on YouTube.</p>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="neon-border rounded-2xl p-4 bg-dark/60">
+                    <div class="relative" style="padding-top:56.25%;">
+                        <iframe class="absolute inset-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/wEdK52XsZPI" title="When You Get Down - Ordo Orphika" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <h3 class="mt-4 text-xl font-display text-gold">When You Get Down</h3>
+                    <p class="text-sm text-gray-300">Official video — psychedelic blues-rock journey.</p>
+                </div>
+
+                <div class="neon-border rounded-2xl p-4 bg-dark/60">
+                    <div class="relative" style="padding-top:56.25%;">
+                        <iframe class="absolute inset-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/LUZy7ypJ6vE" title="Thor's Daze Blues - Ordo Orphika" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <h3 class="mt-4 text-xl font-display text-gold">Thor's Daze Blues</h3>
+                    <p class="text-sm text-gray-300">A raw live performance mixing blues and occult rock.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Contact Section -->
     <section id="contact" class="bg-primary py-24 relative">
