--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
             font-style: normal;
             font-display: swap;
         }
+        @font-face {
+            font-family: 'Cormorant Bold';
+            src: url('assets/fonts/cormorant.bold.otf') format('opentype');
+            font-weight: 700;
+            font-style: normal;
+            font-display: swap;
+        }
+        @font-face {
+            font-family: 'Cormorant Medium';
+            src: url('assets/fonts/cormorant.medium.otf') format('opentype');
+            font-weight: 500;
+            font-style: normal;
+            font-display: swap;
+        }
     </style>
     
     <script>
@@ -222,8 +236,8 @@
             <div class="absolute inset-0 bg-gradient-to-br from-transparent to-black"></div>
         </div>
         <div class="container mx-auto px-6 relative z-10">
-            <h2 class="text-4xl font-display font-bold text-white text-center mb-6">OFFICIAL VIDEOS</h2>
-            <p class="text-center text-gray-300 max-w-2xl mx-auto mb-10">Watch official music videos and live clips from Ordo Orphika. Full screen friendly and responsive — click to expand or use the links to view on YouTube.</p>
+            <h2 class="text-4xl font-display font-bold text-white text-center mb-6" style="font-family: 'Cormorant Bold', serif;">Live in the Studio</h2>
+            <p class="text-center text-gray-300 max-w-2xl mx-auto mb-10" style="font-family: 'Cormorant Medium', serif;">Check out our YouTube channel for more music, live clips, and behind-the-scenes footage.</p>
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="neon-border rounded-2xl p-4 bg-dark/60">
