buncha changes to video page

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <img src="assets/pics/OrdoOrphica_Title_HD_no_background.png" alt="Ordo Orphika logo" class="mx-auto relative -top-8 w-[48rem] sm:w-[56rem] md:w-[64rem] lg:w-[72rem] logo-glow" />
             </div>
             <div class="text-gold text-3xl sm:text-4xl md:text-5xl mb-12" style="font-family: 'Cormorant Regular', serif; letter-spacing: 0.2em; text-shadow: 0 0 20px rgba(212, 175, 55, 0.9), 0 0 40px rgba(212, 175, 55, 0.7), 0 0 60px rgba(212, 175, 55, 0.5);">
-                Rock, Blues & Funk
+                Esoteric Funk N' Roll
             </div>
             <div class="flex flex-col sm:flex-row justify-center gap-6 mb-16">
                 <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="inline-flex items-center justify-center gap-2 bg-[#ff5500] hover:bg-[#ff7700] text-white px-8 py-4 rounded-lg transition-all duration-300 transform hover:scale-105 shadow-xl font-medium">
@@ -236,21 +236,23 @@
             <div class="absolute inset-0 bg-gradient-to-br from-transparent to-black"></div>
         </div>
         <div class="container mx-auto px-6 relative z-10">
-            <h2 class="text-4xl font-display font-bold text-white text-center mb-6" style="font-family: 'Cormorant Bold', serif;">Live in the Studio</h2>
-            <p class="text-center text-gray-300 max-w-2xl mx-auto mb-10" style="font-family: 'Cormorant Medium', serif;">Check out our YouTube channel for more music, live clips, and behind-the-scenes footage.</p>
+            <h2 class="text-4xl font-display font-bold text-white text-center mb-6">Offical Videos</h2>
+            <p class="text-center text-gray-300 max-w-2xl mx-auto mb-10">Check out our YouTube channel for more music, live clips, and behind-the-scenes footage.</p>
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="neon-border rounded-2xl p-4 bg-dark/60">
                     <div class="relative" style="padding-top:56.25%;">
-                        <iframe class="absolute inset-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/LUZy7ypJ6vE" title="Thor's Daze Blues - Ordo Orphika" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe id="player-thor" class="absolute inset-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/LUZy7ypJ6vE?enablejsapi=1&origin=" frameborder="0" title="Thor's Daze Blues - Ordo Orphika" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <h3 class="mt-4 text-xl font-display text-gold">Thor's Daze Blues</h3>
+                    <p class="text-sm text-gray-300 mt-1">Live in the Studio</p>
                 </div>
                 <div class="neon-border rounded-2xl p-4 bg-dark/60">
                     <div class="relative" style="padding-top:56.25%;">
-                        <iframe class="absolute inset-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/wEdK52XsZPI" title="When You Get Down - Ordo Orphika" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe id="player-when" class="absolute inset-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/wEdK52XsZPI?enablejsapi=1&origin=" frameborder="0" title="When You Get Down - Ordo Orphika" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <h3 class="mt-4 text-xl font-display text-gold">When You Get Down</h3>
+                    <p class="text-sm text-gray-300 mt-1">Live in the Studio</p>
                 </div>
             </div>
         </div>
@@ -595,6 +597,50 @@
                 closeBioPopup();
             }
         });
+    </script>
+    <!-- YouTube IFrame API: attempt to set playback quality to 1440p when available (best-effort) -->
+    <script>
+        // Load YouTube IFrame API
+        (function() {
+            var tag = document.createElement('script');
+            tag.src = "https://www.youtube.com/iframe_api";
+            var firstScriptTag = document.getElementsByTagName('script')[0];
+            firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+        })();
+
+        var players = {};
+
+        function onYouTubeIframeAPIReady() {
+            // Create players for each iframe
+            players.thor = new YT.Player('player-thor', {
+                events: {
+                    'onReady': onPlayerReady
+                }
+            });
+
+            players.when = new YT.Player('player-when', {
+                events: {
+                    'onReady': onPlayerReady
+                }
+            });
+        }
+
+        function onPlayerReady(event) {
+            try {
+                // Try to set the best available quality to 1440p
+                var p = event.target;
+                if (p && typeof p.setPlaybackQuality === 'function') {
+                    // Request hd1440; YouTube may ignore and choose another quality
+                    p.setPlaybackQuality('hd1440');
+                    // Also set a short timeout to re-request (sometimes ignored initially)
+                    setTimeout(function() {
+                        try { p.setPlaybackQuality('hd1440'); } catch(e){}
+                    }, 1000);
+                }
+            } catch (e) {
+                console.warn('Could not set playback quality:', e);
+            }
+        }
     </script>
 </body>
 </html>
