--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </div>
         <div class="container mx-auto px-6 relative z-10">
             <h2 class="text-4xl font-display font-bold text-white text-center mb-6">Offical Videos</h2>
-            <p class="text-center text-gray-300 max-w-2xl mx-auto mb-10">Check out our YouTube channel for more music, live clips, and behind-the-scenes footage.</p>
+            <p class="text-center text-gray-300 max-w-2xl mx-auto mb-10">Check out our YouTube channel for more music and live performances.</p>
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="neon-border rounded-2xl p-4 bg-dark/60">
