--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Ordo Orphika - Official Electronic Press Kit">
     <meta property="og:description" content="Official EPK for Ordo Orphika - Seattle-based rock band. Bio, music, videos, tour dates, and press materials.">
-    <meta property="og:image" content="assets/pics/thumbnail.jpg">
+    <meta property="og:image" content="assets/pics/OrdoOrphica_Logo_HD_no_background.jpg">
     <meta property="og:url" content="https://ordoorphika.github.io">
     <meta property="og:site_name" content="Ordo Orphika">
     
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ordo Orphika - Official Electronic Press Kit">
     <meta name="twitter:description" content="Official EPK for Ordo Orphika - Seattle-based rock band. Bio, music, videos, tour dates, and press materials.">
-    <meta name="twitter:image" content="assets/pics/thumbnail.jpg">
+    <meta name="twitter:image" content="assets/pics/OrdoOrphica_Logo_HD_no_background.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&family=Oswald:wght@400;500;600;700&family=Anton:wght@400&display=swap" rel="stylesheet">
