added correct link to yt channel

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <h2 class="text-4xl font-display font-bold text-white text-center mb-6">Offical Videos</h2>
             <p class="text-center text-gray-300 max-w-2xl mx-auto mb-6">Check out our YouTube channel for more music, live clips, and behind-the-scenes footage.</p>
             <div class="text-center mb-8">
-                <a href="https://www.youtube.com/results?search_query=Ordo+Orphika" target="_blank" class="inline-flex items-center gap-3 bg-gold text-primary px-6 py-3 rounded-full shadow-2xl hover:scale-105 transition-transform font-display">
+                <a href="https://www.youtube.com/@OrdoOrphika" target="_blank" class="inline-flex items-center gap-3 bg-gold text-primary px-6 py-3 rounded-full shadow-2xl hover:scale-105 transition-transform font-display">
                     <i class="fab fa-youtube"></i>
                     <span class="font-medium">Visit our YouTube Channel</span>
                 </a>
