--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                         Join us on our epic journey of self reflection and exploration as we reach to get over ourselves and see the bigger picture of what brings us all together across identity and ages.
                     </p>
                     <p class="text-base leading-relaxed">
-                        <span class="text-gold">Ordo Orphika</span> is a 5 piece band from Seattle, their influences span a number of genres ranging from rock, blues, funk, jazz, lo fi, dance music, and psychedelia. It features Seattle music veterans <span class="text-accent">Ian McKagan</span> (Kings of Cavalier, Morning Glory Revival) on guitar and <span class="text-accent">Woody Frank</span> (Whitney Monge, Map of the Woulds) on bass, as well as Saxophonist (Dr.) <span class="text-accent">Mathew Wooten</span>, Keys player <span class="text-accent">Jon Plaut</span>, and the handsome and mysterious drummer <span class="text-accent">Robby DeRosa</span> from the exotic far eastern land of New Jersey!
+                        <span class="text-gold">Ordo Orphika</span> is a 5 piece band from Seattle, their influences span a number of genres ranging from rock, <span class="text-gold font-semibold">blues</span>, <span class="text-gold font-semibold">funk</span>, <span class="text-gold font-semibold">jazz</span>, <span class="text-gold font-semibold">lo fi</span>, <span class="text-gold font-semibold">dance music</span>, and <span class="text-gold font-semibold">psychedelia</span>. It features Seattle music veterans <span class="text-accent">Ian McKagan</span> (Kings of Cavalier, Morning Glory Revival) on guitar and <span class="text-accent">Woody Frank</span> (Whitney Monge, Map of the Woulds) on bass, as well as Saxophonist (Dr.) <span class="text-accent">Mathew Wooten</span>, Keys player <span class="text-accent">Jon Plaut</span>, and the handsome and mysterious drummer <span class="text-accent">Robby DeRosa</span> from the exotic far eastern land of New Jersey!
                     </p>
                     <p class="text-base leading-relaxed">
                         <span class="text-neon font-semibold">What will you hear?</span>
@@ -417,7 +417,7 @@
                         Rich harmonies, interweaving and genre bending soloist, lyrics rich with meaning, symbolism and mythology, both old and new. Diverse songs that aspire to take you on a journey to a higher place within yourself, or maybe just to find the lowest common denominator.
                     </p>
                     <p class="text-base leading-relaxed text-accent font-semibold">
-                        Come and join the cult today! We have snakes!
+                        Come and join the cult today! We have snakes! 🐍
                     </p>
                     
                     <!-- Member Photos -->
